firstapp/vanilla.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vanillapp-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vanilla-app
  template:
    metadata:
      labels:
        app: vanilla-app
    spec:
      containers:
      - name: vanilla-app
        image: mustafasayilgan/vanillapp:v3
        ports:
        - containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: vanillapp-service
spec:
  type: NodePort
  selector:
    app: vanilla-app
  ports:
  - name: http
    port: 80
    targetPort: 8080
    protocol: TCP
